--- a/styles.css
+++ b/styles.css
@@ -9,35 +9,78 @@
 
 .carte-outer-container {
     position: relative;
-    width: auto;
+    width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
 }
 
 .carte-container {
     position: relative;
-    width: fit-content;
-    transition: transform 0.3s ease;
+    height: 100vh;
+    max-height: 100vh;
     margin: 0 auto;
+    transition: transform 0.3s ease;
+}
+
+.sous-sect{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    margin: auto;
+    background: linear-gradient(to right, 
+    #0055A4 0%, 
+    #0055A4 33%, 
+    white 33%, 
+    white 66%, 
+    #EF4135 66%, 
+    #EF4135 100%);
+}
+
+.sous-sect::after {
+    content: '';
+    position: absolute;
+    top: -10%;
+    left: -10%;
+    width: 120%;
+    height: 120%;
+    pointer-events: none;
+    background: radial-gradient(circle at center,transparent 65%,white 100%);
+    z-index: 1;
 }
 
 .carte-img {
-    width: auto;
-    height: 100vh;
+    height: 100%;
+    max-height: 100vh;
     transition: filter 0.5s ease, transform 0.5s ease;
+    margin: 0 auto;
+    display: block;
 }
 
 .marker-container {
     position: absolute;
-    width: 15%;
-    height: 15%;
+    width: 10%;
+    height: 10%;
     cursor: pointer;
+    filter: drop-shadow(0 0 5px #3b82f6);
 }
 
 .titre{
     position: absolute;
     z-index: 2;
+    width: 100%;
+    text-align: center;
+    padding-left: 20%;
 } 
+.titre h2{
+    margin: 2% 25% 0 25%;
+    border: solid;
+    font-size: large;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+}
 .marker-container:hover{
     z-index: 2;
 }
@@ -46,7 +89,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 35% !important;
+    width: 40% !important;
     height: auto;
     transition: all 0.5s ease;
 }
@@ -59,12 +102,9 @@
 @keyframes pulse {
     0% {
         transform: translate(-50%, -50%) scale(1);
-        opacity: 0.7;
+        opacity: 0.3;
     }
-    70% {
-        transform: translate(-50%, -50%) scale(2);
-        opacity: 0;
-    }
+
     100% {
         transform: translate(-50%, -50%) scale(2);
         opacity: 0;
@@ -76,22 +116,52 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 35%;
-    height: 50%;
-    background-color: rgba(255, 0, 0, 0.5);
+    width: 30%;
+    height: 40%;
+    background-color:blue;
     border-radius: 100%;
-    animation: pulse 1.5s infinite;
+    animation: pulse 2.5s infinite;
     z-index: 1;
 }
 
-#marker-container-emmanuelli {
-    left: 85.4%;
-    top: 45.9%;
+#marker-container-lavarenne {
+    left: 80.4%;
+    top: 56.9%;
 }
 
-#marker-container-perret {
-    left: 59%;
-    top: 6.2%;
+#marker-container-leparcsm {
+    left: 54.8%;
+    top: 21.7%;
+}
+
+#marker-container-vieuxsm {
+    left: 23%;
+    top: 9.4%;
+}
+
+#marker-container-champignol {
+    left: 75%;
+    top: 30%;
+}
+
+#marker-container-smcreteil {
+    left: 9.2%;
+    top: 13.6%;
+}
+
+#marker-container-adamville {
+    left: 38.6%;
+    top: 47%;
+}
+
+#marker-container-lapie {
+    left: 30.3%;
+    top: 74.4%;
+}
+
+#marker-container-lesmuriers {
+    left: 58.3%;
+    top: 74%;
 }
 
 .famille-info {
@@ -107,6 +177,8 @@
     z-index: 1000;
     pointer-events: none;
     max-width: auto;
+    top: 10px;
+    left: 10px;
 }
 
 .famille-info.visible {
@@ -144,9 +216,27 @@
     background-color: #0e1d3d;
 }
 
-@media (max-width: 800px) {
+@media (min-width:2000px) {
+    .titre h2{
+        font-size: xx-large;
+    }
+}
+
+@media (max-width: 1000px) {
+    .carte-container {
+        height: auto;
+        width: 100%;
+        max-width: 90vw;
+    }
+    
+    .carte-img {
+        height: auto;
+        width: 100%;
+        max-width: 100%;
+    }
+    
     .famille-info.visible {
-        position: absolute;
+        position: fixed;
         top: 50% !important;
         left: 50% !important;
         transform: translate(-50%, -50%) !important;
@@ -154,9 +244,9 @@
         max-width: 300px;
         z-index: 1000;
         padding: 20px;
-
     }
-    .famille-info{
+    
+    .famille-info {
         max-width: 260px;
         width: 75%;
         top: 50% !important;
