--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,7 @@
 /* Styles pour les transitions */
 body {
     transition: opacity 0.5s ease-in-out;
+    margin: 0px !important;
 }
 
 .carte-container {
@@ -499,8 +500,7 @@ body {
 }
 
 .grid-2-img img{
-    height: 100%;
-    max-height: 99vh ;
+    height: 99.75%;
     object-fit: cover;
     width: 100%;
     min-width: 100%;
